* Added Scrims * Pressing enter on the search screen executes global search * Made Audio player wait 500 ms before starting stream when user requests next/prev song this way if you a user is tapping next repeatedly it will not attempt to start every song as it did before.

--- a/app/views/playlists/playlists-scene.html
+++ b/app/views/playlists/playlists-scene.html
@@ -15,7 +15,8 @@ Artists
     </div>
     <div id="playlistFilterList" x-mojo-element="FilterList">
     </div>
-    <div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'>
+    <div id="spinner-scrim" class="palm-scrim"></div>
+	<div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'>
         <div class="spinner-message">
             Retrieving
             <br>
