--- a/trunk/app/views/account/account-scene.html
+++ b/trunk/app/views/account/account-scene.html
@@ -73,7 +73,7 @@
                     <table class="palm-list-section-label">
                         <tr>
                             <td>
-                                <span class="palm-text-wrapper" x-mojo-loc="">Art in Artist/Albums</span>
+                                <span class="palm-text-wrapper" x-mojo-loc="">Artist Albums Art</span>
                             </td>
                             <td>
                                 <div id="art-toggle" x-mojo-element="ToggleButton" class="toggle-text">
@@ -88,7 +88,7 @@
             <div class="palm-row last" x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
-                        <span class="palm-text-wrapper" x-mojo-loc="">Album/Artist/Songs Fetch Size</span>
+                        <span class="palm-text-wrapper" x-mojo-loc="">List Fetch Size</span>
                         <div id="slider" x-mojo-element="Slider">
                         </div>
                         <span id="fetchSize" class="palm-text-wrapper" x-mojo-loc="">Items:</span>
