--- a/app/views/preferences/preferences-scene.html
+++ b/app/views/preferences/preferences-scene.html
@@ -29,7 +29,7 @@
         <div class="palm-list">
            
             <div class="palm-row first" x-mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper last">
+                <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
                             <td >
@@ -44,8 +44,8 @@
                 </div>
             </div>
 			
-			 <div class="palm-row" x-mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper last">
+			 <div class="palm-row last" x-mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
                             <td >
