--- a/trunk/app/views/search-menu/search-menu-scene.html
+++ b/trunk/app/views/search-menu/search-menu-scene.html
@@ -89,6 +89,22 @@
                 </div>
             </div>
 			
+			<!--
+			 <div class="palm-row" id='searchGenres' x-Mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
+                    <div class="mainMenuLeft">
+                        <div class="mainMenuTitle">
+                            Genres
+                        </div>
+                    </div>
+                    <div class="mainMenuRight">
+                        <img class="mainMenuIcon" src="images/icons/genres.png">
+                        </img>
+                    </div>
+                    <div class="mainMenuClear">
+                    </div>
+                </div>
+            </div>-->
 			
 			<div class="palm-row last" id='searchGlobal' x-Mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
