--- a/trunk/app/views/now-playing/now-playing-scene.html
+++ b/trunk/app/views/now-playing/now-playing-scene.html
@@ -59,6 +59,8 @@
         </div>
         <div id="audioPlayerDiv">
         </div>
+		 <div id="soundFxDiv">
+        </div>
     </div>
 </div>
 <div class='customBackground'>
