* Improvement:  Using real published APIs for bluetooth and headset controls    * Headset Controls are as follows: Double Click: Next Track, Click:play/pause, Click and Hold: Prev Track  * Added some audio for future sound fx

--- a/app/views/now-playing/now-playing-scene.html
+++ b/app/views/now-playing/now-playing-scene.html
@@ -59,6 +59,8 @@
         </div>
         <div id="audioPlayerDiv">
         </div>
+		 <div id="soundFxDiv">
+        </div>
     </div>
 </div>
 <div class='customBackground'>
