--- a/trunk/src/app/views/albums/albums-scene.html
+++ b/trunk/src/app/views/albums/albums-scene.html
@@ -20,28 +20,10 @@
     </div>
     <div class="palm-header-spacer">
     </div>
+    
     <div id="shuffleForArtist">
-        <div id="shuffleAll" class="shuffle-all-list-item palm-row single" x-mojo-tap-highlight="momentary">
+        <!--<div id="shuffleAll" class="shuffle-all-list-item palm-row single" x-mojo-tap-highlight="momentary">
             <div class="palm-row-wrapper">
-                <!--
-                <div class="music-songs-thumbnail-previews" >
-                <div id="albumArtLeft"  class="thumb left">
-                <div class="music-songs-overlay"></div>
-                <div class="music-songs-thumbnail"><img class="music-songs-image" src="images/default-album-art-list-view.png" /></div>
-                </div>
-                <div id="albumArtCenter"  class="thumb center">
-                <div class="music-songs-overlay"></div>
-                <div class="music-songs-thumbnail"><img class="music-songs-image" src="images/default-album-art-list-view.png" /></div>
-                </div>
-                <div id="albumArtRight" class="thumb right">
-                <div class="music-songs-overlay"></div>
-                <div class="music-songs-thumbnail"><img class="music-songs-image" src="images/default-album-art-list-view.png" /></div>
-                </div>
-                </div>
-                <div class="count-pill-container">
-                <div class="count-pill-wrapper" id="shuffle-count"></div>
-                </div>
-                -->
                 <div class="shuffleLeft shuffleAllText">
                     <div class="truncating-text" x-mojo-loc=''>
                         Shuffle All
@@ -52,7 +34,27 @@
                     </img>
                 </div>
             </div>
+        </div>-->
+        <div id="allSongs" class="palm-row multi-line" id='#{name}_example' x-Mojo-tap-highlight="momentary">
+    <div class="palm-row-wrapper">
+        <div class="mainMenuLeft">
+            <div class="mainMenuTitle">
+                All Songs
+            </div>
         </div>
+        <div class="mainMenuRight">
+            <img class="mainMenuIcon" src="images/icons/songs.png">
+            </img>
+        </div>
+        <div class="mainMenuClear">
+        </div>
+        <div  class="count-pill-container single-art">
+            <div id="numSongs" class="count-pill-wrapper">
+                0
+            </div>
+        </div>
+    </div>
+</div>
         <div id="spacerDiv" class="music-alpha-divider-spacer" style="display:none;">
         </div>
         <div id="thick-border" class="thick-bottom-border" style="display:block;">
