--- a/trunk/src/app/views/albums/albums-scene.html
+++ b/trunk/src/app/views/albums/albums-scene.html
@@ -48,7 +48,7 @@
         </div>
         <div class="mainMenuClear">
         </div>
-        <div  class="count-pill-container single-art">
+        <div id="songsPill" class="count-pill-container single-art">
             <div id="numSongs" class="count-pill-wrapper">
                 0
             </div>
