Fixed null issues created from JSLint.  Added pending AmpacheServer request cancel, if you navigate away from a loading screen it will cancel the pending request.

--- a/src/app/views/albums/albums-scene.html
+++ b/src/app/views/albums/albums-scene.html
@@ -48,7 +48,7 @@
         </div>
         <div class="mainMenuClear">
         </div>
-        <div  class="count-pill-container single-art">
+        <div id="songsPill" class="count-pill-container single-art">
             <div id="numSongs" class="count-pill-wrapper">
                 0
             </div>
