--- a/src/app/views/search-menu/listitem.html
+++ b/src/app/views/search-menu/listitem.html
@@ -1,15 +1,11 @@
 <div class="palm-row multi-line" id='#{name}_example' x-Mojo-tap-highlight="momentary">
     <div class="palm-row-wrapper">
         <div class="mainMenuLeft">
-            <div class="mainMenuTitle">
-                #{-name}
-            </div>
+            <div class="mainMenuTitle">#{-name}</div>
         </div>
         <div class="mainMenuRight">
-            <img class="mainMenuIcon" src="#{icon}">
-            </img>
+            <img class="mainMenuIcon" src="#{icon}"></img>
         </div>
-        <div class="mainMenuClear">
-        </div>
+        <div class="mainMenuClear"></div>
     </div>
 </div>
