--- a/src/app/views/songs/divider.html
+++ b/src/app/views/songs/divider.html
@@ -1,3 +1,1 @@
-<div class="palm-divider alpha">
-  <div>#{dividerLabel}</div>
-</div>
+<div class="palm-divider alpha"><div>#{dividerLabel}</div></div>
