--- a/trunk/src/app/views/songs/listitem_w_artist.html
+++ b/trunk/src/app/views/songs/listitem_w_artist.html
@@ -2,9 +2,7 @@
     <div class="palm-row-wrapper">
         <div class="songsMenuLeft">
             <div class="truncating-text" id="title" x-mojo-loc=''>
-                <div class="songTitle truncating-text">
-                    #{-title}
-                </div>
+                <div class="songTitle truncating-text">#{-title}</div>
             </div>
             <div class="truncating-text songDesc truncating-text">
                 #{-artist}&nbsp;-&nbsp;#{-album}<!--<a href="#" class="link" id='link_artist_#{-artist_id}'>#{-artist}</a>
@@ -13,10 +11,8 @@
             </div>
         </div>
         <div class="songsMenuRight">
-            <img id="moreOptions" class="songsMenuIcon" src="images/icons/plus.png">
-            </img>
+            <img id="moreOptions" class="songsMenuIcon" src="images/icons/plus.png"></img>
         </div>
-        <div class="mainMenuClear">
-        </div>
+        <div class="mainMenuClear"></div>
     </div>
 </div>
