--- a/trunk/src/app/views/songs/songs-scene.html
+++ b/trunk/src/app/views/songs/songs-scene.html
@@ -1,29 +1,19 @@
 <div id="main" class="palm-hasheader palm-dark  music-songs">
-    <div x-mojo-element="ProgressPill" id="songProgressbar" class="ProgressPillHeader">
-    </div>
-	<div id="spinner-scrim" class="palm-scrim"></div>
+    <div x-mojo-element="ProgressPill" id="songProgressbar" class="ProgressPillHeader"></div>
+    <div id="spinner-scrim" class="palm-scrim"></div>
     <div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'>
-        <div class="spinner-message">
-            Retrieving
-            <br>
-            Songs
-        </div>
+        <div class="spinner-message">Retrieving<br>Songs</div>
     </div>
     <div id="shuffleAll" class="shuffle-all-list-item palm-row single shuffleRow" x-mojo-tap-highlight="momentary">
         <div class="palm-row-wrapper ">
             <div class="shuffleLeft shuffleAllText">
-                <div class="truncating-text" x-mojo-loc=''>
-                    Shuffle All
-                </div>
+                <div class="truncating-text" x-mojo-loc=''>Shuffle All</div>
             </div>
             <div class="shuffleLeft shuffleAllIcon">
-                <img src="images/icons/shuffle.png" id="coverArt">
-                </img>
+                <img src="images/icons/shuffle.png" id="coverArt"></img>
             </div>
         </div>
     </div>
-    <div id="thick-border" class="thick-bottom-border" style="display:block;">
-    </div>
-    <div id="songsList" x-mojo-element="FilterList">
-    </div>
+    <div id="thick-border" class="thick-bottom-border" style="display:block;"></div>
+    <div id="songsList" x-mojo-element="FilterList"></div>
 </div>
