* Improvement: Auto restart stalled stream after 20 seconds of stalled state.

--- a/src/app/views/now-playing/now-playing-scene.html
+++ b/src/app/views/now-playing/now-playing-scene.html
@@ -1,4 +1,4 @@
-<div class="palm-scene palm-dark">
+<div class="palm-scene palm-dark now-playing">
     <div class="palm-hasheader music-now-playing-art music-streaming">
         <div class="palm-header left truncating-text">
             <!-- onclick="assistant.toggleViews();">-->
