--- a/trunk/src/app/views/mainmenu/listitem.html
+++ b/trunk/src/app/views/mainmenu/listitem.html
@@ -11,7 +11,7 @@
         </div>
         <div class="mainMenuClear">
         </div>
-        <div id="count-#{-name}" class="count-pill-container single-art">
+        <div id="count-#{-name}" class="count-pill-container single-art" style="display: #{displayCount};">
             <div class="count-pill-wrapper">
                 #{description}
             </div>
