* New Feature: Random Artists, Albums, Songs  TODO: Add a drop down to allow selection of how many random items 1,5,10,20 will likely be the options... songs will probably have more 10,25,50,100.

--- a/src/app/views/mainmenu/listitem.html
+++ b/src/app/views/mainmenu/listitem.html
@@ -11,7 +11,7 @@
         </div>
         <div class="mainMenuClear">
         </div>
-        <div id="count-#{-name}" class="count-pill-container single-art">
+        <div id="count-#{-name}" class="count-pill-container single-art" style="display: #{displayCount};">
             <div class="count-pill-wrapper">
                 #{description}
             </div>
