--- a/trunk/src/app/views/artists/listitem.html
+++ b/trunk/src/app/views/artists/listitem.html
@@ -1,5 +1,7 @@
-<div class="palm-row multi-line" id='#{id}_example' x-Mojo-tap-highlight="momentary">
+<div class="palm-row multi-line" x-Mojo-tap-highlight="momentary">
     <div class="palm-row-wrapper">
-        <div class="truncating-text"  id="title" x-mojo-loc=''><div class="artistTitle truncating-text">#{-name}</div></div>
+        
+        <div class="OneLineTitle truncating-text">#{-name}</div>
+        <div class="OneLineDesc truncating-text">Albums: #{-albums} Songs: #{-songs}</div>
     </div>
 </div>
