--- a/trunk/src/app/views/random/random-scene.html
+++ b/trunk/src/app/views/random/random-scene.html
@@ -3,6 +3,24 @@
     <div class="palm-header-spacer"></div>
     <div id="search-scrim" class="palm-scrim"></div>
     <div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'><span id="wait-message" class="spinner-message">Searching</span></div>
+    
+    <div class="palm-group unlabeled palm-dark mainMenuList">
+                    
+                    
+                    
+    <div x-mojo-element="Spinner" id="center-album-spinner" class="spinner-center random-album-spinner"></div>
+    <div x-mojo-element="Spinner" id="left-album-spinner"  class="spinner-left random-album-spinner"></div>
+    <div x-mojo-element="Spinner" id="right-album-spinner"  class="spinner-right random-album-spinner"></div>
+    
+    <div class="random-album-spinner spinner-left spinner-arrow"><img src="images/right.png"/></div>
+    <div class="random-album-spinner spinner-right  spinner-arrow"><img src="images/left.png"/></div>
+    
+    <div id="myPhotoDiv" style="margin: 0 auto 0 auto;" x-mojo-element="ImageView" ></div>
+    <div id="albumArtist" class="center-text small-font truncating-text">
+                Artist - Album 
+            </div>
+    </div>
+    
     <div id="search-group" class="palm-group unlabeled palm-dark mainMenuList">
         <div id="search-list" class="palm-list">
             
