--- a/trunk/src/app/views/mainmenu/mainmenu-scene.html
+++ b/trunk/src/app/views/mainmenu/mainmenu-scene.html
@@ -23,8 +23,7 @@
     </div>
     <div class="palm-divider solid">
     </div>
-    <div id="mainMenuList" class="mainMenuList" x-mojo-element="List">
-    </div>
+    <div id="mainMenuList" class="mainMenuList" x-mojo-element="List"></div>
     <div class='customBackground'>
     </div>
     <div id="audioPlayerDiv">
