--- a/trunk/src/app/views/random/random-scene.html
+++ b/trunk/src/app/views/random/random-scene.html
@@ -24,69 +24,10 @@
     <div id="search-group" class="palm-group unlabeled palm-dark mainMenuList">
         <div id="search-list" class="palm-list">
             
-            <div class="palm-row first" id='randomArtists' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Artists</div>
-                    </div>
-                    <div class="mainMenuRight">
-                        <img class="mainMenuIcon" src="images/icons/artists.png"></img>
-                    </div>
-                    <div class="mainMenuClear"></div>
-                </div>
-            </div>
-            <div class="palm-row" id='randomAlbum' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Albums</div>
-                    </div>
-                    <div class="mainMenuRight">
-                        <img class="mainMenuIcon" src="images/icons/albums.png"></img>
-                    </div>
-                    <div class="mainMenuClear"></div>
-                </div>
-            </div>
-            <div class="palm-row last" id='randomSongs' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Songs</div>
-                    </div>
-                    <div class="mainMenuRight">
-                        <img class="mainMenuIcon" src="images/icons/songs.png"></img>
-                    </div>
-                    <div class="mainMenuClear"></div>
-                </div>
-            </div>
-            <!--
-            <div class="palm-row last" id='searchPlaylists' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Playlists</div>
-                    </div>
-                    <div class="mainMenuRight">
-                        <img class="mainMenuIcon" src="images/icons/playlists.png"></img>
-                    </div>
-                    <div class="mainMenuClear"></div>
-                </div>
-            </div>
-            
-            <div class="palm-row" id='searchGenres' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">
-                            Genres
-                        </div>
-                    </div>
-                    <div class="mainMenuRight">
-                        <img class="mainMenuIcon" src="images/icons/genres.png">
-                        </img>
-                    </div>
-                    <div class="mainMenuClear">
-                    </div>
-                </div>
-            </div>-->
+            <div id="randomMenuList" class="mainMenuList" x-mojo-element="List"></div>
             
         </div>
     </div>
+    
 </div>
 
