--- a/src/app/views/albums/listitem_w_artist_art.html
+++ b/src/app/views/albums/listitem_w_artist_art.html
@@ -7,9 +7,9 @@
         
         <div class="albumLeft">
             <div class="artistAlbumTitle truncating-text">#{-name}</div>
-        <div class="artistAlbumDesc" style="float: left;">#{-artist}</div>
-        <div class="artistAlbumDesc" style="float: right;">#{-description}</div>
-        <div style="clear: both;"></div>
+            <div class="artistAlbumDescLeft truncating-text">#{-artist}</div>
+            <div class="artistAlbumDescRight truncating-text">#{-description}</div>
+            <div style="clear: both;"></div>
         </div>
         <div class="albumRight">
              <img class="palm-dashboard-icon" src="#{art}"></img>
