--- a/trunk/src/stylesheets/main.css
+++ b/trunk/src/stylesheets/main.css
@@ -390,6 +390,25 @@ height: 100%;
     padding: 0 15px 10px 15px;
 }
 
+.artistAlbumDescRight
+{
+    float: right;
+    margin-left:-300px;
+    margin-top: -10px;
+    padding: 0 15px 10px 2px;
+    font-size:small;
+}
+
+.artistAlbumDescLeft
+{
+    float: left;
+    margin-right:-300px;
+    margin-top: -10px;
+    padding: 0 2px 10px 15px;
+    font-size:small;
+}
+
+
 #albumsFilterList .artistAlbumDesc {
     color: white;
     margin-top: -10px;
