--- a/src/app/views/playlists/playlists-scene.html
+++ b/src/app/views/playlists/playlists-scene.html
@@ -1,18 +1,21 @@
-<!--
-<div id="main" class="palm-hasheader music-songs">
-    <div class="palm-header left" id="main-hdr">
-        Artists
-        <div x-mojo-element="Spinner" id="artists-spinner" class='tinySpinner'  ></div>
-    </div>
-</div>
--->
-<div id="main" class="palm-dark">
-    <div x-mojo-element="ProgressPill" id="playlistProgressbar" class="ProgressPillHeader"></div>
-    <div class="palm-header-spacer"></div>
-    <div class='customBackground'></div>
+<div id="ampache-main" class="palm-dark">
+    
+    <div id="header" class="palm-header left truncating-text">
+        <div class="palm-header-wrapper">
+            <div id='now-playing-button' class="now-playing-button" x-mojo-tap-highlight="immediate">
+                <div class="now-playing-wrapper">
+                    <span x-mojo-loc=''>Now Playing</span>
+                </div>
+            </div>
+            <div class='header-body'>
+                <div class='icon'><img class="icon-img" src='images/icons/playlists.png'/></div>
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Playlists</div>
+            </div>
+        </div>
+    </div>  
+    
+    <div id="scrim" class="palm-scrim"></div>
+    <div id="spacerDiv" class="music-header-spacer"></div>
     <div id="playlistFilterList" x-mojo-element="FilterList"></div>
-    <div id="spinner-scrim" class="palm-scrim"></div>
-    <div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'>
-        <div class="spinner-message">Retrieving<br>Data</div>
-    </div>
+
 </div>
