--- a/src/app/views/songs/songs-scene.html
+++ b/src/app/views/songs/songs-scene.html
@@ -1,10 +1,23 @@
-<div id="main" class="palm-hasheader palm-dark  music-songs">
-    <div x-mojo-element="ProgressPill" id="songProgressbar" class="ProgressPillHeader"></div>
-    <div id="spinner-scrim" class="palm-scrim"></div>
-    <div x-mojo-element="Spinner" id="large-activity-spinner" class='centerSpinner'>
-        <div class="spinner-message">Retrieving<br>Songs</div>
-    </div>
-    <div id="shuffleAll" class="shuffle-all-list-item palm-row single shuffleRow" x-mojo-tap-highlight="momentary">
+<div id="ampache-main" class="palm-hasheader palm-dark">
+    
+    <div id="header" class="palm-header left truncating-text">
+        <div class="palm-header-wrapper">
+            <div id='now-playing-button' class="now-playing-button" x-mojo-tap-highlight="immediate">
+                <div class="now-playing-wrapper">
+                    <span x-mojo-loc=''>Now Playing</span>
+                </div>
+            </div>
+            <div class='header-body'>
+                <div class='icon'><img class="icon-img" src='images/icons/songs.png'/></div>
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''></div>
+            </div>
+        </div>
+    </div>  
+    
+    <div id="spacerDiv" class="music-header-spacer"></div>
+    <div id="scrim" class="palm-scrim"></div>
+    
+    <div id="shuffleAll" class="shuffle-all-list-item palm-row single" x-mojo-tap-highlight="momentary">
         <div class="palm-row-wrapper ">
             <div class="shuffleLeft shuffleAllText">
                 <div class="truncating-text" x-mojo-loc=''>Shuffle All</div>
@@ -14,6 +27,7 @@
             </div>
         </div>
     </div>
+    
     <div id="thick-border" class="thick-bottom-border" style="display:block;"></div>
     <div id="songsList" x-mojo-element="FilterList"></div>
 </div>
