--- a/trunk/src/app/views/songs/listitem.html
+++ b/trunk/src/app/views/songs/listitem.html
@@ -1,4 +1,4 @@
-<div class="palm-row multi-line" id='#{id}_example' x-Mojo-tap-highlight="momentary">
+<div class="palm-row multi-line" id='#{id}_song' x-Mojo-tap-highlight="momentary">
     <div class="palm-row-wrapper">
         <div class="truncating-text"  id="title" x-mojo-loc=''><div class="songTitle truncating-text">#{-title}</div></div>
     </div>
