New shuffle icon.  Shuffle All updates.

--- a/src/app/views/songs/songs-scene.html
+++ b/src/app/views/songs/songs-scene.html
@@ -19,12 +19,17 @@
     
     <div id="shuffleAll" class="shuffle-all-list-item palm-row single" x-mojo-tap-highlight="momentary">
         <div class="palm-row-wrapper ">
-            <div class="shuffleLeft shuffleAllText">
-                <div class="truncating-text" x-mojo-loc=''>Shuffle All</div>
-            </div>
-            <div class="shuffleLeft shuffleAllIcon">
-                <img src="images/icons/shuffle.png" id="coverArt"></img>
-            </div>
+            <div class="mainMenuLeft">
+                    <div class="mainMenuTitle">
+                        Shuffle All
+                    </div>
+                </div>
+                <div class="mainMenuRight">
+                    <img class="mainMenuIcon" src="images/icons/shuffle.png">
+                    </img>
+                </div>
+                <div class="mainMenuClear">
+                </div>
         </div>
     </div>
     
