--- a/src/app/views/now-playing/now-playing-scene.html
+++ b/src/app/views/now-playing/now-playing-scene.html
@@ -48,7 +48,7 @@
                 <div id="playback-progress" class="elapsed">
                     00:00
                 </div>
-                <div id="sliderdiv" x-mojo-element="ProgressSlider" class="stream-buffer-bar">
+                <div id="sliderdiv" x-mojo-element="ProgressSlider" class="stream-buffer-bar" align="left">
                 </div>
                 <div id="playback-remaining" class="duration">
                     00:00
